feat: La ficha se guarda automaticamente con cada cambio en la base de datos

--- a/fichas-front/src/app/components/ver-ficha/ver-ficha.component.html
+++ b/fichas-front/src/app/components/ver-ficha/ver-ficha.component.html
@@ -1,6 +1,5 @@
-<ul *ngIf="ficha">
+<div *ngIf="ficha">
     <h1>{{ficha.title}}</h1>
-    <li>{{ficha.description}}</li>
-</ul>
-
-<ckeditor [editor]="Editor" [(ngModel)]="ficha.content"></ckeditor>
+    <p>{{ficha.description}}</p>
+    <ckeditor [editor]="Editor" [(ngModel)]="ficha.content" (change)="onChange($event)"></ckeditor>
+</div>
