--- a/fichas-front/src/app/app.component.html
+++ b/fichas-front/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav>
     <a [routerLink]="['/fichas']">Fichas</a>
     <a [routerLink]="['/crear-ficha']">Crear Ficha</a>
+    <a [routerLink]="['/crear-usuario']">Crear Usuario</a>
 </nav>
 
 <router-outlet>
