--- a/fichas-front/src/app/app.component.html
+++ b/fichas-front/src/app/app.component.html
@@ -1,8 +1,9 @@
 <nav>
     <a [routerLink]="['/fichas']">Fichas</a>
     <a [routerLink]="['/crear-ficha']">Crear Ficha</a>
-    <a [routerLink]="['/crear-usuario']">Crear Usuario</a>
+    <a [routerLink]="['/crear-usuario']">Registrarse</a>
     <a [routerLink]="['/ingresar']">Ingresar</a>
+    <a (click)="logOut()" [routerLink]="['/ingresar']">Cerrar sesión</a>
 </nav>
 
 <router-outlet>
