--- a/fichas-front/src/app/components/crear-usuario/crear-usuario.component.html
+++ b/fichas-front/src/app/components/crear-usuario/crear-usuario.component.html
@@ -1,12 +1,53 @@
-<h1>Crear usuario</h1>
-<form #usuarioForm="ngForm" (ngSubmit)="addUsuario(usuarioForm)">
-    <label for="name">Nombre:</label>
-    <input type="text" name="name" ngModel>
-    <label for="email">Email:</label>
-    <input type="email" name="email" ngModel>
-    <label for="password">Contraseña:</label>
-    <input type="password" name="password" ngModel>
-    <label for="confirmPassword">Confirmar contraseña:</label>
-    <input type="password" name="confirmPassword" ngModel>
-    <input type="submit">
-</form>
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-8">
+            <div class="card">
+                <h2 class="card-header">Crear usuario</h2>
+                <div class="card-body">
+                    <form #usuarioForm="ngForm" (ngSubmit)="addUsuario(usuarioForm)">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Nombre:</label>
+                            <input type="text" class="form-control" name="name" id="name" ngModel>
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email:</label>
+                            <input type="email" class="form-control" name="email" id="email" ngModel>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Contraseña:</label>
+                            <input type="password" class="form-control" name="password" id="password" ngModel>
+                        </div>
+                        <div class="mb-3">
+                            <label for="confirmPassword" class="form-label">Confirmar contraseña:</label>
+                            <input type="password" class="form-control" name="confirmPassword" id="confirmPassword"
+                                ngModel>
+                        </div>
+                        <div class="mb-3">
+                            <input type="submit" class="btn btn-primary" value="Registrarse">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 
+<div class="card">
+                <h2 class="card-header">Ingresar usuario</h2>
+                <div class="card-body">
+                    <form #usuarioForm="ngForm" (ngSubmit)="logUsuario(usuarioForm)">
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email:</label>
+                            <input type="email" class="form-control" name="email" id="email" ngModel>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Contraseña:</label>
+                            <input type="password" class="form-control" name="password" id="password" ngModel>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Ingresar</button>
+                    </form>
+                </div>
+            </div>
+
+-->
