--- a/fichas-front/src/app/components/fichas/fichas.component.html
+++ b/fichas-front/src/app/components/fichas/fichas.component.html
@@ -1,9 +1,38 @@
-<h1>Mis fichas</h1>
-
-<ul *ngFor="let ficha of fichas">
-    <li>Título: {{ficha.title}}</li>
-    <li>Descripción: {{ficha.description}}</li>
-
-    <button (click)="deleteFicha(ficha._id)">Borrar</button>
-    <button><a [routerLink]="['/ver-ficha', ficha._id]">Ver</a></button>
-</ul>
+<div class="container">
+    <div class="row mt-5">
+        <h1>Mis fichas</h1>
+    </div>
+    <div class="row mt-3">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover table-sm">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Título</th>
+                                    <th scope="col">Descripción</th>
+                                    <th scope="col">Acciones</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let ficha of fichas">
+                                    <th scope="row">{{ficha.title}}</th>
+                                    <td>{{ficha.description}}</td>
+                                    <td>
+                                        <a class="btn btn-primary btn-sm mx-1" [routerLink]="['/ver-ficha', ficha._id]">
+                                            <i class="bi bi-pencil-fill"></i>
+                                        </a>
+                                        <button class="btn btn-danger btn-sm" (click)="deleteFicha(ficha._id)">
+                                            <i class="bi bi-trash-fill"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
