--- a/fichas-front/src/app/components/ingresar/ingresar.component.html
+++ b/fichas-front/src/app/components/ingresar/ingresar.component.html
@@ -1,8 +1,25 @@
-<h1>Ingresar usuario</h1>
-<form #usuarioForm="ngForm" (ngSubmit)="logUsuario(usuarioForm)">
-    <label for="email">Email:</label>
-    <input type="email" name="email" ngModel>
-    <label for="password">Contraseña:</label>
-    <input type="password" name="password" ngModel>
-    <input type="submit">
-</form>
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-8">
+            <h1>Contenido</h1>
+        </div>
+        <div class="col-4">
+            <div class="card">
+                <h2 class="card-header">Ingresar usuario</h2>
+                <div class="card-body">
+                    <form #usuarioForm="ngForm" (ngSubmit)="logUsuario(usuarioForm)">
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email:</label>
+                            <input type="email" class="form-control" name="email" id="email" ngModel>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Contraseña:</label>
+                            <input type="password" class="form-control" name="password" id="password" ngModel>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Ingresar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
