--- a/fichas-front/src/app/components/ver-ficha/ver-ficha.component.html
+++ b/fichas-front/src/app/components/ver-ficha/ver-ficha.component.html
@@ -1,5 +1,11 @@
-<div *ngIf="ficha">
-    <h1>{{ficha.title}}</h1>
-    <p>{{ficha.description}}</p>
-    <ckeditor [editor]="Editor" [(ngModel)]="ficha.content" (change)="onChange($event)"></ckeditor>
+<div class="container" *ngIf="ficha">
+    <div class="row mt-5">
+        <h1>{{ficha.title}}</h1>
+    </div>
+    <div class="row mt-3">
+        <p>{{ficha.description}}</p>
+    </div>
+    <div class="row mt-3">
+        <ckeditor [editor]="Editor" [(ngModel)]="ficha.content" (change)="onChange($event)"></ckeditor>
+    </div>
 </div>
