--- a/fichas-front/src/styles.css
+++ b/fichas-front/src/styles.css
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+@font-face {
+  font-family: cinzel;
+  src: url(assets/fonts/cinzel/Cinzel-Regular.otf) format("opentype");
+}
