--- a/fichas-front/src/styles.css
+++ b/fichas-front/src/styles.css
@@ -4,3 +4,15 @@
   font-family: cinzel;
   src: url(assets/fonts/cinzel/Cinzel-Regular.otf) format("opentype");
 }
+@font-face {
+  font-family: redhands;
+  src: url(assets/fonts/redhands/KGRedHands.ttf) format("opentype");
+}
+@font-face {
+  font-family: redhands2;
+  src: url(assets/fonts/redhands/KGRedHandsOutline.ttf) format("opentype");
+}
+body {
+  background-image: url("./assets/img/fondo.jpg");
+  background-attachment: fixed;
+}
