--- a/fichas-front/src/app/app.component.html
+++ b/fichas-front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
         <img src="./assets/img/book.png" width="4%">
         <h1 class="navbar-brand mx-3 logo">Biblionotas</h1>
@@ -7,10 +7,10 @@
                 <div *ngIf="identificado; then siIdentificado"></div>
                 <ng-template #siIdentificado>
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" [routerLink]="['/fichas']">Mis fichas</a>
+                        <a class="nav-link " aria-current="page" routerLinkActive="activo" [routerLink]="['/fichas']">Mis fichas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" [routerLink]="['/crear-ficha']">Crear ficha</a>
+                        <a class="nav-link " aria-current="page" routerLinkActive="activo" [routerLink]="['/crear-ficha']">Crear ficha</a>
                     </li>
                 </ng-template>
             </ul>
@@ -18,10 +18,10 @@
                 <div *ngIf="!identificado; then noIdentificado; else cerrarSesion"></div>
                 <ng-template #noIdentificado>
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" [routerLink]="['/ingresar']">Ingresar</a>
+                        <a class="nav-link " aria-current="page" routerLinkActive="activo" [routerLink]="['/ingresar']">Ingresar</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" [routerLink]="['/crear-usuario']">Registrarse</a>
+                        <a class="nav-link " aria-current="page" routerLinkActive="activo" [routerLink]="['/crear-usuario']">Registrarse</a>
                     </li>
                 </ng-template>
                 <ng-template #cerrarSesion>
