--- a/fichas-front/src/app/components/ingresar/ingresar.component.html
+++ b/fichas-front/src/app/components/ingresar/ingresar.component.html
@@ -1,7 +1,50 @@
 <div class="container">
     <div class="row mt-5">
         <div class="col-8">
-            <h1>Contenido</h1>
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="./assets/img/book-slider1.jpg" class="d-block w-100">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3><b>Crea fichas de estudio de tus libros.</b></h3>
+                            <p>Apunta lo más importante para luego tener un registro de cada libro leído.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="./assets/img/bookslider2.jpg" class="d-block w-100" alt="">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3>¡Puedes ingresar con un usuario de prueba!</h3>
+                            <p>Email: usuario@ejemplo.com</p>
+                            <p>Contraseña: 1234</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./assets/img/book-slider3.jpg" class="d-block w-100" alt="">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3>Primer proyecto de prueba</h3>
+                            <p>Creado con las herramientas del MEAN Stack.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
         </div>
         <div class="col-4">
             <div class="card">
@@ -10,7 +53,6 @@
                     <form #usuarioForm="ngForm" (ngSubmit)="logUsuario(usuarioForm)">
                         <div class="mb-3">
                             <label for="email" class="form-label">Email:</label>
-
                             <input type="email" class="form-control" name="email" id="email" ngModel #email="ngModel"
                                 required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                             <div *ngIf="email.invalid && (email.dirty || email.touched)"
@@ -26,10 +68,7 @@
                         <div class="mb-3">
                             <label for="password" class="form-label">Contraseña:</label>
                             <input type="password" class="form-control" name="password" id="password" ngModel
-                                #password="ngModel" required minlength="4" aria-describedby="passwordHelpBlock">
-                            <div id="passwordHelpBlock" class="form-text">
-                                Tu contraseña debe tener mínimo 4 caracteres
-                            </div>
+                                #password="ngModel" required minlength="4">
                             <div *ngIf="password.invalid && (password.dirty || password.touched)"
                                 class="alert alert-danger mt-3 validation-form" role="alert">
                                 <div *ngIf="password.errors?.['required']">
