--- a/fichas-front/src/app/components/fichas/fichas.component.html
+++ b/fichas-front/src/app/components/fichas/fichas.component.html
@@ -38,7 +38,8 @@
             </div>
             <div *ngIf="!fichas?.length">
                 <h3>¡Aun no tienes ninguna ficha!</h3>
-                <a class="nav-link " aria-current="page" [routerLink]="['/crear-ficha']">Crea una aquí</a>
+                <button type="button" class="btn btn-primary" aria-current="page" [routerLink]="['/crear-ficha']">Crea
+                    una aquí</button>
             </div>
         </div>
     </div>
