--- a/fichas-front/src/app/components/ingresar/ingresar.component.css
+++ b/fichas-front/src/app/components/ingresar/ingresar.component.css
@@ -10,9 +10,8 @@
 
 .carousel-caption {
   color: white;
+  background-color: #567895;
   font-family: cinzel;
-  text-shadow: 2px 0 0 #000, -2px 0 0 #000, 0 2px 0 #000, 0 -2px 0 #000,
-    1px 1px #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
 }
 
 .carousel .carousel-item {
