feat: mostrar en las vistas algunas validaciones desde el backend en formularios de usuarios

--- a/fichas-front/src/app/components/crear-usuario/crear-usuario.component.html
+++ b/fichas-front/src/app/components/crear-usuario/crear-usuario.component.html
@@ -63,6 +63,11 @@
                                 [disabled]="!usuarioForm.form.valid">
                         </div>
                     </form>
+                    <div *ngIf="status">
+                        <div class="alert alert-danger alert-dismissible mt-3" role="alert">
+                            <strong>{{status}}</strong>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
