--- a/fichas-front/src/app/components/ingresar/ingresar.component.html
+++ b/fichas-front/src/app/components/ingresar/ingresar.component.html
@@ -82,6 +82,11 @@
                         <button type="submit" class="btn btn-primary"
                             [disabled]="!usuarioForm.form.valid">Ingresar</button>
                     </form>
+                    <div *ngIf="status">
+                        <div class="alert alert-danger alert-dismissible mt-3" role="alert">
+                            <strong>{{status}}</strong>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
